# engraphis

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  DEPLOY.md  Dockerfile  HANDOFF-2026-07-01-research.md  HANDOFF-2026-07-01.md  HANDOFF.md  LAUNCH_READINESS.md  LAUNCH_READINESS_2026-07-10.md  LICENSE  MANIFEST.in  MASTER_PLAN.md  NOTICE  README.md  RELEASE_READINESS.md  SECURITY.md  _measure_d3.mjs  _measure_galaxy.mjs  _wtest_bash.txt  _wtest_write.txt  conftest.py  docker-compose.yml  docker-entrypoint.sh  package-lock.json  package.json  playwright.config.js  pyproject.toml  railway.json  requirements.txt  setup.py
.claude-plugin/: marketplace.json  plugin.json  skill-assets.sha256
.githooks/: pre-commit
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build-compiled-wheels.yml  ci.yml  codeql.yml  commercial-backup.yml  commercial-restore-drill.yml  production-synthetics.yml  release.yml
demo/: README.md  engraphis_screen_demo.html  prepare_screen_demo.py  record_screen_demo.mjs
deploy/: railway-template.json
docs/: AGENT_CONNECT.md  ARCHITECTURE_V3.md  COMMERCIAL_OPERATIONS.md  GO_TO_MARKET.md  HOSTING_RAILWAY.md  IMPLEMENTATION.md  KILO_CODE_INTEGRATION.md  LAUNCH-POST.md  LAUNCH_PLAN.md  LICENSING.md  MONETIZATION-FAST.md  RAILWAY_TEMPLATE.md  RELEASE.md  SHIP-IT-PLAN.md  SYNC.md  landing-page.md  vs-competitors.md
engraphis/: __init__.py  ai_context.py  analytics.py  app.py  automation.py  autosync.py  billing.py  cloud_features.py  cloud_license.py  cloud_session.py  commercial.py  commercial_manifest.json  config.py  dashboard_app.py  email_outbox.py  graphdata.py  hosted_client.py  http_security.py  licensing.py  local_auth.py  logging_setup.py  mcp_cli.py  mcp_server.py  models.py  netutil.py  observability.py  private_state.py  read_only_api.py  redirector.py  relay_app.py  resend_events.py  service.py  update_check.py  vendor_app.py
engraphis/backends/: __init__.py  codegraph.py  embedder_api.py  embedder_deterministic.py  embedder_st.py  encrypted_db.py  extractor.py  graph_extractor.py  postgres_schema.py  reranker.py  resources.py  retention.py  sync_folder.py  sync_relay.py  vector_numpy.py  vector_sqlitevec.py
engraphis/core/: __init__.py  codegraph_export.py  conflicts.py  consolidate.py  engine.py  graph_layers.py  graph_scene.py  graphrank.py  grounded.py  ids.py  interfaces.py  recall.py  resolve.py  schema.py  scoring.py  store.py  sync.py  textutil.py  user_model.py
engraphis/engines/: __init__.py  embedder.py  ingest.py  intelligence.py  recall.py  reweight.py  thoughts.py
engraphis/inspector/: __init__.py  app.py  auth.py  cloud_mount.py  index.html  license_cloud.py  license_compat_proxy.py  license_registry.py  sync_relay.py  webhooks.py
engraphis/llm/: client.py
engraphis/routes/: __init__.py  memory.py  v2_api.py  v2_team.py  vault.py
engraphis/static/: __init__.py  dashboard.css  dashboard.js  index.html
engraphis/stores/: __init__.py  graph.py  ledger.py  vaults.py  vectors.py
eval/: __init__.py  ablation.py  chunking_eval.py  external.py  grounded.py  harness.py  metrics.py
eval/datasets/: codemem.jsonl  graph_multihop.jsonl  longdoc.jsonl  sample.jsonl
scripts/: auto_maintain.py  backfill_graph.py  check_codeql_sarif.py  check_commercial_manifest.py  cli.py  commercial_backup.py  consolidate.py  design-lint.sh  externalize_dashboard_assets.py  graph_cli.py  graph_server.py  init.py  inspector.py  install_shortcuts.py  launch_dashboard.ps1  launch_dashboard.ps1.disabled  license_admin.py  mcp_server_http.py  migrate_to_v2.py  repair_embed_dim.py  sdk_compat.py  seed_from_obsidian.py  smoke_cloud.py  start_dashboard.py  start_server.py  sync.py  test_new.py  test_routes.py  update.py  verify_release_artifacts.py
skills/engraphis-memory/: SKILL.md
skills/engraphis-memory/references/: CONVENTIONS.md  SCOPING.md  TOOLS.md
tests/: conftest.py  graph_scene_fixture.json  team_client.py  test_agent_connect.py  test_agent_connect_mcp.py  test_analytics.py  test_app_auth.py  test_auth_concurrency.py  test_authoritative_license_registry.py  test_autosync.py  test_backends_factories.py  test_billing.py  test_chunking_eval.py  test_chunking_extractor.py  test_cli_entrypoints.py  test_cloud_endpoints_mounted.py  test_cloud_features.py  test_cloud_license.py  test_cloud_session.py  test_code_index_route_security.py  test_codegraph.py  test_codeql_sarif_gate.py  test_commercial_backup.py  test_commercial_ga.py  test_commercial_relay_readiness.py  test_compiled_integrity.py  test_config.py  test_conflicts.py  test_consolidate.py  test_core_ids.py  test_core_store.py  test_cron_write_tools_workspace_default.py  test_dashboard_auth_placement.py  test_dashboard_dream_ui.py  test_dashboard_security_headers_and_open_window.py  test_dashboard_v2.py  test_db_path_default.py  test_decay_idempotent.py  test_dreaming_trigger.py  test_email_outbox_retention.py  (+98 more)
tests/e2e/: commercial.spec.js
