[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engraphis"
version = "0.1.0"
description = "Engraphis — self-hosted AI memory system with Ebbinghaus decay, interaction-aware recall, and conscious thought synthesis."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.25",
    "numpy>=1.24",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "sentence-transformers>=2.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
engraphis-server = "scripts.start_server:main"
engraphis-cli = "scripts.cli:main"

[tool.setuptools.packages.find]
include = ["engraphis*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
